# fps

./: .gitignore  .gitmodules  pyproject.toml
services/analysis/clip/: Dockerfile  extract.py  model.py  requirements.txt  serve.py
services/analysis/clip2video/: config.py  extract.py  model.py  modeling.patch  serve.py  utils.py
services/analysis/clipvip/: extract.py  serve.py
services/analysis/cluster/: main.py
services/analysis/colors/: extract.py  get.py  read.py  visualize.py
services/analysis/dinov2/: extract.py  serve.py
services/analysis/openclip/: Dockerfile  extract.py  requirements.txt  serve.py
services/analysis/openimagesv4/: extract.py
services/common/: config.py  extractors.py  files.py  record.py  types.py  utils.py
services/core/: app.py
services/core/static/css/: styles.css
services/core/static/js/: config.js  search.js
services/core/templates/: index.html  search.html
services/index/faiss/: build.py  serve.py
