[project]
name = "fps"
version = "0.1.0"
description = "None"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.4.0",
    "easydict>=1.13",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.14",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "h5py>=3.14.0",
    "more-itertools>=10.7.0",
    "open-clip-torch>=2.32.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pipreqs>=0.5.0",
    "python-multipart>=0.0.20",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "transformers>=4.53.0",
    "uvicorn>=0.35.0",
]
